Plugin Name: HTML Email Templates
Author: Aaron Edwards (incsub)
http://premium.wpmudev.org/project/html-email-templates/

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

1.2 - 5/15/2014
----------------------------------------------------------------------
- New: Added Templates and Instant Preview option
- Filters: Works for template with sidebar:
    htmlemail_sidebar_posts => List of posts to be displayed, 
    htmlemail_sidebar_title => Tile of sidebar

1.1 - 3/6/2014
----------------------------------------------------------------------
- Fix: Preserve other email headers

1.0 - 3/6/2013
----------------------------------------------------------------------
- Initial release